--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Revision of Position</title>
+    <script src="https://kit.fontawesome.com/f0511d0431.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -85,6 +86,64 @@
                 <div class="child">Item-4</div>
             </div>
         </section>
+        <section class="sec-4">
+            <div class="parent-6">
+                <div class="child">Item-1</div>
+                <div class="child">Item-2</div>
+                <div class="child">Item-3</div>
+                <div class="child">Item-4</div>
+                <div class="child">Item-5</div>
+                <div class="child">Item-6</div>
+                <div class="child">Item-7</div>
+                <div class="child">Item-8</div>
+                <div class="child">Item-9</div> 
+                <div class="child">Item-10</div>
+                <div class="child">Item-11</div>
+                <div class="child">Item-12</div>
+                <div class="child">Item-13</div>
+                <div class="child">Item-14</div>
+                <div class="child">Item-15</div>
+                <div class="child">Item-16</div>
+                <div class="child">Item-18</div> 
+                <div class="child">Item-19</div>
+                <div class="child">Item-20</div>
+                <div class="child">Item-21</div>
+                <div class="child">Item-22</div>
+                <div class="child">Item-23</div>
+                <div class="child">Item-24</div>
+                <div class="child">Item-25</div>
+                <div class="child">Item-26</div>
+                <div class="child">Item-27</div>
+                <div class="child">Item-28</div>
+                <div class="child">Item-29</div>
+            </div>
+        </section>
+        <section class="sec-5">
+            <div class="parent-7">
+                <div class="child">Item-1</div>
+                <div class="child">Item-2</div>
+                <div class="child-hero">Item-3</div>
+                <div class="child">Item-4</div>
+                <div class="child">Item-5</div>
+            </div>
+        </section>
+        <section class="sec-6">
+            <div class="parent-8">
+                <div class="child">Item-1</div>
+                <div class="child">Item-2</div>
+                <div class="child">Item-3</div>
+                <div class="child">Item-4</div>
+                <div class="child">Item-5</div>
+                <div class="child">Item-6</div>
+            </div>
+        </section>
+        <footer class="foot">
+            <div class="icon">
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                <a href=""><i class="fa-brands fa-twitter"></i></a>
+            </div>
+        </footer>
     </main>
     </body>
     </html>
